starting work on initiative artifact type; initial work on setting up test framework

--- a/test/fixtures/jobs.yml
+++ b/test/fixtures/jobs.yml
@@ -1,7 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  type: 
+retail:
+  name: Online Store Builder
 
-two:
-  type: 
+financial:
+  name: Financial Services Builder
+
+medical:
+  name: Medical Device Builder
